# crusta

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Crusta.desktop  Crusta.pro  LICENSE  LICENSE.txt  README.md  crusta.pro  data  index.html  resources.qrc  tabwindow.cpp
crusta/: CMakeLists.txt  Makefile  addresslineedit.cpp  addresslineedit.h  addresslineedit.h.autosave  bookmarkmanager.cpp  bookmarkmanager.h  codeeditor.cpp  codeeditor.h  crusta.desktop  crusta.pro  crusta.pro.user.207bbb7  crusta.pro.user.4711d4c  crusta.pro.user.940a693  crusta.rc  crustaspeech.cpp  crustaspeech.h  debugger.cpp  debugger.h  downloaditemwidget.cpp  downloaditemwidget.h  downloadmanager.cpp  downloadmanager.h  downloadnotifier.cpp  downloadnotifier.h  downloadwidget.cpp  downloadwidget.h  featurenotifier.cpp  featurenotifier.h  fullscreennotifier.cpp  fullscreennotifier.h  historymanager.cpp  historymanager.h  jseditor.cpp  jseditor.h  main.cpp  mainview.cpp  mainview.h  manager.cpp  manager.h  (+40 more)
crusta/lib/helpers/: EnvironmentInfo.cpp  EnvironmentInfo.h
crusta/lib/managers/: bookmarkmanager.cpp  bookmarkmanager.h  downloadmanager.cpp  downloadmanager.h  downloadwidget.cpp  downloadwidget.h  historymanager.cpp  historymanager.h
crusta/lib/sidepanel/: sidepane.cpp  sidepane.h
crusta/lib/speeddial/: speeddial.cpp  speeddial.h
crusta/lib/tabwidget/: addresslineedit.cpp  addresslineedit.h  privateaddresslineedit.cpp  privateaddresslineedit.h  privatetabwindow.cpp  privatetabwindow.h  tabwindow.cpp  tabwindow.h
crusta/lib/utils/: codeeditor.cpp  codeeditor.h  crustaspeech.cpp  crustaspeech.h  fullscreennotifier.cpp  fullscreennotifier.h  jseditor.cpp  jseditor.h  permissions.cpp  permissions.h  presentationmodenotifier.cpp  presentationmodenotifier.h  siteinfo.cpp  siteinfo.h  themeeditor.cpp  themeeditor.h  timenotifier.cpp  timenotifier.h
crusta/lib/webview/: popup.cpp  popup.h  privatewebview.cpp  privatewebview.h  webpage.cpp  webpage.h  webview.cpp  webview.h
desktop/: CMakeLists.txt  Info.plist  adblock.cpp  adblock.h  bookmarks.cpp  bookmarks.h  browser.cpp  browser.h  browser_schemes.cpp  browser_schemes.h  browser_window.cpp  browser_window.h  browser_window_p.h  downloads.cpp  downloads.h  history.cpp  history.h  main.cpp  plugins.cpp  plugins.h  preferences.cpp  preferences.h  request_interceptor.cpp  request_interceptor.h  resources.qrc  search_engine.cpp  search_engine.h  tab.cpp  tab.h  webchannel.cpp  webchannel.h  webchannel_p.h  webview.cpp  webview.h
src/: CMakeLists.txt  addressbar.cpp  addressbar.h  bookmarks.cpp  bookmarks.h  browser.cpp  browser.h  completer.cpp  completer.h  cookies.cpp  cookies.h  crscheme.cpp  crscheme.h  database.cpp  database.h  downloads.cpp  downloads.h  history.cpp  history.h  main.cpp  mainwindow.cpp  mainwindow.h  plugin.cpp  plugin.h  plugins.cpp  plugins.h  preferences.cpp  preferences.h  searchengine.cpp  searchengine.h  sidebar.cpp  sidebar.h  src.pro  startpage.cpp  startpage.h  tab.cpp  tab.h  tabwidget.cpp  tabwidget.h  theme.cpp  (+14 more)
src/assets/: assets.qrc
src/assets/html/: home.html  webchannel.js
src/assets/styles/: stylesheet.css
src/bootstrap/: appmanager.cpp  appmanager.h  database.cpp  database.h  settings.cpp  settings.h
src/data/: abstractdataitem.cpp  abstractdataitem.h  bookmarksitem.cpp  bookmarksitem.h  historyitem.cpp  historyitem.h  panelitem.cpp  panelitem.h  speeddialitem.cpp  speeddialitem.h
src/extra/: lineedit.h  qclickablelabel.cpp  qclickablelabel.h
src/lib/: CMakeLists.txt
src/lib/app/: browserwindow.cpp  browserwindow.h  database.cpp  database.h  mainapplication.cpp  mainapplication.h  standardpaths.cpp  standardpaths.h  statusbar.cpp  statusbar.h  webdialogwindow.cpp  webdialogwindow.h
src/lib/bookmarks/: bookmarkdialog.cpp  bookmarkdialog.h  bookmarkitem.cpp  bookmarkitem.h  bookmarksmanager.cpp  bookmarksmanager.h
src/lib/data/: data.qrc
src/lib/downloads/: downloaddialog.cpp  downloaddialog.h  downloaditemwidget.cpp  downloaditemwidget.h  downloadsmanager.cpp  downloadsmanager.h
src/lib/history/: historyitem.cpp  historyitem.h  historymanager.cpp  historymanager.h
src/lib/navigation/: menu.cpp  menu.h  omnibar.cpp  omnibar.h  searchengine.cpp  searchengine.h  searchenginemanager.cpp  searchenginemanager.h  toolbar.cpp  toolbar.h  toolbarbutton.cpp  toolbarbutton.h
src/lib/plugins/: plugininterface.cpp  plugininterface.h  pluginloader.cpp  pluginloader.h  plugins.cpp  plugins.h
src/lib/tabwidget/: tab.cpp  tab.h  tabbar.cpp  tabbar.h  tabwidget.cpp  tabwidget.h
src/lib/tools/: about.cpp  about.h  common-defs.cpp  common-defs.h  manager.cpp  manager.h  preferences.cpp  preferences.h  thememanager.cpp  thememanager.h
src/lib/webengine/: jsobject.cpp  jsobject.h  notifier.cpp  notifier.h  scheme.cpp  (+7 more)
src/main/: CMakeLists.txt  main.cpp
src/managers/: bookmarksmanager.cpp  bookmarksmanager.h  downloadmanager.cpp  downloadmanager.h  historymanager.cpp  historymanager.h  searchenginemanager.cpp  searchenginemanager.h
src/pages/: externaljsobject.cpp  externaljsobject.h  scripts.cpp  scripts.h
src/sidebar/: sidebar.cpp  sidebar.h  sidebarbutton.cpp  sidebarbutton.h  sidebarpopup.cpp  sidebarpopup.h
src/tabview/: addtabbutton.cpp  addtabbutton.h  bookmarkpopup.cpp  bookmarkpopup.h  bookmarksbar.cpp  bookmarksbar.h  infobar.cpp  infobar.h  omnibar.cpp  omnibar.h  progressbar.cpp  progressbar.h  siteinfopopup.cpp  siteinfopopup.h  stackedwidget.cpp  stackedwidget.h  tab.cpp  tab.h  tabbar.cpp  tabbar.h  tabbarbutton.cpp  tabbarbutton.h  tablist.cpp  tablist.h  tablistitem.cpp  tablistitem.h  tabview.cpp  tabview.h  tabwidget.cpp  tabwidget.h  toolbar.cpp  toolbar.h  toolbarbutton.cpp  toolbarbutton.h  toolbarpopup.cpp  toolbarpopup.h
src/utils/: dimensions.cpp  dimensions.h  layouts.cpp  layouts.h  strings.cpp  strings.h  tools.cpp  tools.h  tools.hpp
src/webview/: crustascheme.cpp  crustascheme.h  webpage.cpp  webpage.h  webview.cpp  webview.h
src/window/: centralwidget.cpp  centralwidget.h  statusbar.h  window.cpp  window.h
(+101 files in other folders)
